WIP: Add timer support
